[gd_scene load_steps=3 format=3 uid="uid://dpfdl6oojbr15"]

[ext_resource type="Script" uid="uid://c08cyqc18iiws" path="res://src/ui_components/visual_stadium/visual_stadium.gd" id="1_6f486"]
[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://theme_base/label/label_settings_bold.tres" id="2_w8wf6"]

[node name="VisualStadium" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6f486")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("2_w8wf6")

[node name="Capacity" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="YearBuilt" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="YearRenewed" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TicketPrice" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MaintenanceCost" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
